[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
package_name = krsrc
description = Korea SKA Regional Centre Home
# long_description = file: README.rst
author = Shinyoung Kim
author_email = radioshiny@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/krsrc/krsrc.github.io
github_project = krsrc/krsrc.github.io
project_urls =
    Documentation = https://krsrc.readthedocs.io
    Source = https://github.com/krsrc/krsrc.github.io